Corrected spacing in json file, moved div class down on twig file and styled css

--- a/styleguide/source/assets/scss/02-molecules/_dr-finder-search-suggestions.scss
+++ b/styleguide/source/assets/scss/02-molecules/_dr-finder-search-suggestions.scss
@@ -3,16 +3,20 @@
  * @file
  * Styles for Dr Finder filter suggestions .
  */
-.dr-finder-filter_suggestions{
-  @extend .ama__h1;
+.dr-finder-filter_suggestions {
+  font-size: 37px;
+  color: $black;
+
 }
 .dr-finder-filter_suggestion-text ul li {
   list-style-type: disc;
-  padding: 13px 0;
+  padding: $gutter/4 0;
   font-size: 26px;
+  color: $black;
+
 }
 
-.dr-finder-filter_suggestion-text{
+.dr-finder-filter_suggestion-text {
   padding: 0 20px;
-  margin: 50px 0 0 35px;
+  margin: 20px 0 0 20px;
 }
